syntax = "proto3";

package devkit.v1;

message NavigationBar {
  int32 navigation_bar_id = 1;
  string navigation_bar_name = 2;
  repeated NavigationBarItem items = 6;
}

message NavigationBarItem {
  int32 navigation_bar_item_id = 8;
  int32 parent_id = 9;
  string key = 1;
  string label = 2;
  string label_ar = 3;
  string icon = 4;
  string route = 5;
  int32 level = 7;
  repeated NavigationBarItem items = 6;
}
